<?xml version="1.0"?>
<package format="2">
  <name>tapi_iiwa_control</name>
  <version>1.0.0</version>
  <description>Control Kuka iiwa with relative pointing devices (joystick, spacenav, ...) over the tapi_iiwa package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="tobby@tobby.eu">Tobias Holst</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>GPLv3</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="repository">https://github.com/tobby88/ros-tapi-iiwa-control</url>


  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="tobby@tobby.eu">Tobias Holst</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>tapi_iiwa</depend>
  <depend>tapi_lib</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
